tests/backend/checkmach/fail20.output
File "fail20.ml", line 7, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function Fail20.foo (camlFail20.foo_HIDE_STAMP)

File "fail20.ml", line 8, characters 16-25:
Error: allocation of 32 bytes on a path to exceptional return (fail20.ml:8,16--25;fail20.ml:3,18--29)

File "fail20.ml", line 10, characters 13-24:
Error: called function may allocate on a path to exceptional return (direct call camlFail20.div_HIDE_STAMP)
